@@ -78,6 +78,9 @@ __thiscall LootList Entity_NPC::shopkeeper_get_loot(bool ShouldAdvance);
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505383ec40a1????????33c58945??5657508d45??64a3????????8bf18b7b":
 __thiscall LootList Entity_NPC::fireplace_get_loot(bool ShouldAdvance);
 
+"558bec83ec20f30f100d":
+static int Entity_NPC::FindTargetPit(Vector* Pos1, Vector* Pos2, unsigned int PitIndex);
+
 /*
 // Minecart functions
 "558bec51538bd98b8b":
